objects/Case.object
<CustomObject><businessProcesses>
<fields>
        <fullName>Execute_ver_command__c</fullName>
        <label>Execute ver command</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>First_Area_Change_Date__c</fullName>
        <description>Date/time when Area changed for the first time , excluding auto routing when case created by the system</description>
        <label>First Area Change Date</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>First_Assignment_Date__c</fullName>
        <description>The date when first owner has been assigned to the case. Once this field is populated, there is no changes for the field.</description>
        <label>First Assignment Date</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>First_Contact_Date__c</fullName>
        <description>First contacted by MW agents,field is based on trigger when first outbound email has been sent to the customer or first outbound call has been done. Excluded Auto replay outbound  emails</description>
        <label>First Contact Date</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>First_Follow_Up_Reason_Date__c</fullName>
        <description>this will capture the date/time that the follow up reason is changed</description>
        <label>First Follow Up Reason Date</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Follow_up_Date_Time__c</fullName>
        <label>Follow-up Date/Time</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Follow_up_Days__c</fullName>
        <formula>IF ( 
(TEXT(Area__c)="BNL - Technical Support")||
(TEXT(Area__c)="CH - Technical Support")||
(TEXT(Area__c)="DE - Technical Support")||
(CONTAINS(TEXT(Area__c), "Install"))||
(TEXT(Area__c)="ES - Technical Support")||
(TEXT(Area__c)="FR - Technical Support")||
(TEXT(Area__c)="IN - Customer Support")||
(TEXT(Area__c)="IN - Technical Support")||
(TEXT(Area__c)="IT - Technical Support")||
(TEXT(Area__c)="Natick - Technical Support")||
(TEXT(Area__c)="Natick - Customer Support")||
(TEXT(Area__c)="Nordic - Technical Support")||
(TEXT(Area__c)="UK - Technical Support"), 2, 3
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Follow-up Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Follow_up_Owner__c</fullName>
        <description>will capture the reason of delay on RAC cases.</description>
        <label>Follow up Owner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RAC</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Follow_up_Reason__c</fullName>
        <description>independent field used for RAC case types only</description>
        <label>Follow up Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bill To/Deliver To</fullName>
                </value>
                <value>
                    <fullName>Credit Hold</fullName>
                </value>
                <value>
                    <fullName>Export Compliance</fullName>
                </value>
                <value>
                    <fullName>Future Delivery Date</fullName>
                </value>
                <value>
                    <fullName>License Configuration</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Payment - CC/Prepayment</fullName>
                </value>
                <value>
                    <fullName>PO - Format/Other</fullName>
                </value>
                <value>
                    <fullName>PO - Not attached</fullName>
                </value>
                <value>
                    <fullName>PO - Payment Terms</fullName>
                </value>
                <value>
                    <fullName>Quote - Discount Authorization</fullName>
                </value>
                <value>
                    <fullName>Quote Number - Missing</fullName>
                </value>
                <value>
                    <fullName>Re-quote</fullName>
                </value>
                <value>
                    <fullName>Reseller Authorization</fullName>
                </value>
                <value>
                    <fullName>RTS Escalation</fullName>
                </value>
                <value>
                    <fullName>Tax/VAT - Other</fullName>
                </value>
                <value>
                    <fullName>Tax Address Update</fullName>
                </value>
                <value>
                    <fullName>Tax - Sales Tax Cert</fullName>
                </value>
                <value>
                    <fullName>Transactional reseller</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Follow_up__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Follow-up</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ForwardToDistributor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check Box for identifying case for  forward to distributor.</description>
        <label>ForwardToDistributor</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Geck_Article_Title__c</fullName>
        <label>Geck Article Title</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Geck_Article_URL__c</fullName>
        <label>Geck Article URL</label>
        <type>Url</type>
    </fields><fields>
        <fullName>Geck_Pattern_ID__c</fullName>
        <description>SegV Geck Pattern ID</description>
        <label>Pattern Geck ID</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Has_Gecko_Escalation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Gecko Escalation</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Has_Linked_Article__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for KCS metric measurement, true if at least 1 article is related to the case.  related to a Trigger</description>
        <label>Has Linked Article</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>IBM__c</fullName>
        <formula>HYPERLINK( "http://inside-apps.mathworks.com/ibm/main?OpenLicense=" &amp;  License__c, "Link to IBM" )</formula>
        <label>IBM</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Install_Major_Task__c</fullName>
        <description>Task type for Install team</description>
        <label>Install Major Task</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SFT</fullName>
                </value>
                <value>
                    <fullName>Anonymization</fullName>
                </value>
                <value>
                    <fullName>Customer Environment Review</fullName>
                </value>
                <value>
                    <fullName>Enterprise License Server Configuration</fullName>
                </value>
                <value>
                    <fullName>FIMTAH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Install_Reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Install Reviewed</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>IsReadyForForwardingEmailToDistributor__c</fullName>
        <description>This flag will be used in ForwardEmailToDistributorSchedulable class to query cases</description>
        <formula>AND(
    ForwardToDistributor__c = true
    ,OR(
        Text(Origin) = 'ML_Desktop'
        ,Text(Origin) = 'ML_Web'
    )
    ,Text(Status) != 'Cancelled'
    ,(now()-CreatedDate) &gt; ($Setup.General_Settings__c.ForwardCToDistributorSchedulableInterval__c/1440)
)</formula>
        <label>IsReadyForForwardingEmailToDistributor</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Known_vs_New__c</fullName>
        <description>Used to track KCS metrics based on the article related to the case (new, existing or none)  Related to a trigger.</description>
        <label>Known vs. New</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Known</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Last_Activity_Date__c</fullName>
        <description>Date/time when the most recent Emai-Outbound or Call Outbound has been made , excluding Auto Reply email. First time will be the same as First Initial Contact Date</description>
        <label>Last Activity Date</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Last_Area_Change_Date__c</fullName>
        <description>Date/time when Area changed last time , exclude aut routing when Case created by the system</description>
        <label>Last Area Change Date</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Last_Assignment_Date__c</fullName>
        <description>Date/time when the owner last changed.  First time should be the same as First Assignment Date</description>
        <label>Last Assignment Date</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>License_Account_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>License Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>License_Account__c</fullName>
        <label>License Account</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>License_Management__c</fullName>
        <label>License Management</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FlexNet/Standalone</fullName>
                </value>
                <value>
                    <fullName>MHLM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>License_Type__c</fullName>
        <description>Changed Field Label from License Type to No License Reason with the Q2L changes in 2016</description>
        <label>No License Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>No License Number</fullName>
                </value>
                <value>
                    <fullName>PreRelease</fullName>
                </value>
                <value>
                    <fullName>Pre-Sales</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Trial/Demo</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>License_Use__c</fullName>
        <description>to capture the licene use from the license apps</description>
        <label>License Use</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>License__c</fullName>
        <label>License #</label>
        <length>22</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Licensing_App__c</fullName>
        <formula>HYPERLINK( "http://inside-apps.mathworks.com/licensing/masterLicense/list?q=" &amp;  License__c, "Link to Licensing App" )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Licensing App</label>
        <type>Text</type>
    </fields><fields>
        <fullName>List_View_Area__c</fullName>
        <label>List View Area</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Local_Order_Italy__c</fullName>
        <description>Used to capture the local order number for Italy RAC office only</description>
        <inlineHelpText>for Italy Revenue Accounting &amp; Control office use only</inlineHelpText>
        <label>Local Order # (Italy)</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Mobile_OS_Version__c</fullName>
        <label>Mobile OS Version</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Platform__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Android 5 (Lollipop)</fullName>
                </value>
                <value>
                    <fullName>Android 4.4 (KitKat)</fullName>
                </value>
                <value>
                    <fullName>Android 4.3 (Jelly Bean)</fullName>
                </value>
                <value>
                    <fullName>Android 4.2 (Jelly Bean)</fullName>
                </value>
                <value>
                    <fullName>Android 4.1 (Jelly Bean)</fullName>
                </value>
                <value>
                    <fullName>Android 4.0.3 – 4.0.4 (Ice Cream Sandwich)</fullName>
                </value>
                <value>
                    <fullName>Android 4.0 – 4.0.2 (Ice Cream Sandwich)</fullName>
                </value>
                <value>
                    <fullName>Android 3.2 (Honeycomb)</fullName>
                </value>
                <value>
                    <fullName>Android 3.1 (Honeycomb)</fullName>
                </value>
                <value>
                    <fullName>Android 3.0 (Honeycomb)</fullName>
                </value>
                <value>
                    <fullName>Android 2.3.3 – 2.3.7 (Gingerbread)</fullName>
                </value>
                <value>
                    <fullName>iOS 11.x</fullName>
                </value>
                <value>
                    <fullName>iOS 10.x</fullName>
                </value>
                <value>
                    <fullName>iOS 9.x</fullName>
                </value>
                <value>
                    <fullName>iOS 8.x</fullName>
                </value>
                <value>
                    <fullName>iOS 7.x</fullName>
                </value>
                <value>
                    <fullName>iOS 6.x</fullName>
                </value>
                <value>
                    <fullName>iOS 5.x</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>ORC__c</fullName>
        <formula>HYPERLINK( "http://inside-apps.mathworks.com/orclookups/contactDetails.do?contactId=" &amp; Contact.Siebel_Contact_Id__c, "Link to ORC" )</formula>
        <label>ORC</label>
        <type>Text</type>
    </fields><fields>
        <fullName>OS__c</fullName>
        <label>OS</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Platform__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>All OS</fullName>
                </value>
                <value>
                    <fullName>Linux Any</fullName>
                </value>
                <value>
                    <fullName>Centos Any</fullName>
                </value>
                <value>
                    <fullName>Centos 7.x</fullName>
                </value>
                <value>
                    <fullName>Centos 6.x</fullName>
                </value>
                <value>
                    <fullName>Centos 5.x</fullName>
                </value>
                <value>
                    <fullName>Debian Any</fullName>
                </value>
                <value>
                    <fullName>Debian 9.x</fullName>
                </value>
                <value>
                    <fullName>Debian 8.x</fullName>
                </value>
                <value>
                    <fullName>Debian 7.x</fullName>
                </value>
                <value>
                    <fullName>Debian 6.x</fullName>
                </value>
                <value>
                    <fullName>Debian 5.x</fullName>
                </value>
                <value>
                    <fullName>Fedora Core Any</fullName>
                </value>
                <value>
                    <fullName>Fedora 26</fullName>
                </value>
                <value>
                    <fullName>Fedora 24</fullName>
                </value>
                <value>
                    <fullName>Fedora Core 17</fullName>
                </value>
                <value>
                    <fullName>Fedora Core 16</fullName>
                </value>
                <value>
                    <fullName>Fedora Core 15</fullName>
                </value>
                <value>
                    <fullName>Fedora Core 14</fullName>
                </value>
                <value>
                    <fullName>Mac Any</fullName>
                </value>
                <value>
                    <fullName>macOS 10.13x (High Sierra)</fullName>
                </value>
                <value>
                    <fullName>macOS 10.12x (Sierra)</fullName>
                </value>
                <value>
                    <fullName>macOS 10.11x (El Capitan)</fullName>
                </value>
                <value>
                    <fullName>macOS 10.10x (Yosemite)</fullName>
                </value>
                <value>
                    <fullName>macOS 10.9x (Mavericks)</fullName>
                </value>
                <value>
                    <fullName>macOS 10.8x (Mountain Lion)</fullName>
                </value>
                <value>
                    <fullName>macOS 10.7x (Lion)</fullName>
                </value>
                <value>
                    <fullName>macOS 10.6x (Snow Leopard)</fullName>
                </value>
                <value>
                    <fullName>macOS 10.5x (Leopard)</fullName>
                </value>
                <value>
                    <fullName>macOS 10.4x (Tiger)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>On_Support_Reason__c</fullName>
        <description>The actual response from OnSupport API. Mapped to Case UI field Support Reason. Mapping has been done within custom metadata</description>
        <label>On Support Reason</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>On_Support__c</fullName>
        <label>On Support</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Opened_for_Hrs__c</fullName>
        <description>Elapsed time in hours  from the time when case was created regardless the case status, including weekends</description>
        <formula>(NOW() -  CreatedDate) * 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Case age elapse time in hours  regardless the status, includes weekend</inlineHelpText>
        <label>Opened for (Hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Opportunity_Primary_Purpose__c</fullName>
        <formula>IF (Opportunity__c &lt;&gt; null,   TEXT(Opportunity__r.Primary_Purpose__c), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Primary Purpose</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Owner_Name__c</fullName>
        <formula>Owner:User.FirstName  &amp; " " &amp; Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Name</label>
        <type>Text</type>
    </fields><fields>
        <fullName>PO_Date__c</fullName>
        <description>PO date will be used for reporting on RAC cases</description>
        <label>PO Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>PartnerAgreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Agreement</label>
        <referenceTo>Partner_Agreement__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Usage_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Windows x32</fullName>
                </value>
                <value>
                    <fullName>Windows x64</fullName>
                </value>
                <value>
                    <fullName>Mac</fullName>
                </value>
                <value>
                    <fullName>Linux x32</fullName>
                </value>
                <value>
                    <fullName>Linux x64</fullName>
                </value>
                <value>
                    <fullName>Solaris</fullName>
                </value>
                <value>
                    <fullName>All Platforms</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Android</fullName>
                </value>
                <value>
                    <fullName>iOS</fullName>
                </value>
                <value>
                    <fullName>Windows Phone</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Prerelease_Activation_Date__c</fullName>
        <description>Prerelease Survey</description>
        <label>Prerelease - Activation Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Prerelease_Survey_Date_Survey_Received__c</fullName>
        <description>Get Feedback to update this date when the Survey is received</description>
        <label>Prerelease Survey - Date Survey Received</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Prerelease_Survey_Prerelease__c</fullName>
        <description>Identify the Prerelease the survey was sent for</description>
        <label>Prerelease Survey - Prerelease</label>
        <length>25</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Prerelease_Survey_Send_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prerelease Survey - indicator to send the survey via email</description>
        <label>Prerelease Survey - Send Survey</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Product_Base_Code__c</fullName>
        <label>Product Base Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AA</fullName>
                </value>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BU</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CB</fullName>
                </value>
                <value>
                    <fullName>CF</fullName>
                </value>
                <value>
                    <fullName>CH</fullName>
                </value>
                <value>
                    <fullName>CI</fullName>
                </value>
                <value>
                    <fullName>CM</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CP</fullName>
                </value>
                <value>
                    <fullName>CS</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>CV</fullName>
                </value>
                <value>
                    <fullName>DA</fullName>
                </value>
                <value>
                    <fullName>DB</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DF</fullName>
                </value>
                <value>
                    <fullName>DG</fullName>
                </value>
                <value>
                    <fullName>DM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Product_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Lookup</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Questions_Specific_To_Issue__c</fullName>
        <label>Questions Specific To Issue</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Quote_Order_Number__c</fullName>
        <description>will be used for reporting on RAC cases</description>
        <label>Quote/Order Number</label>
        <length>18</length>
        <type>Text</type>
    </fields><fields>
        <fullName>RAC_Siebel_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Holds the siebel Activity Id which is used as the external Id. RAC Cases are created as Activities in Siebel.</description>
        <externalId>true</externalId>
        <inlineHelpText>Siebel Activity Id of the RAC Case</inlineHelpText>
        <label>RAC Siebel Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>Release__c</fullName>
        <formula>Product_Lookup__r.Release__c</formula>
        <label>Release</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Report_ID__c</fullName>
        <label>Report ID</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>SUPRT_SFTWR_ID__c</fullName>
        <formula>SupportPackageName__r.SUPPRT_SFTWR_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Support Package Software ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Scheduler__c</fullName>
        <label>Scheduler</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>MJS</fullName>
                </value>
                <value>
                    <fullName>LSF</fullName>
                </value>
                <value>
                    <fullName>PBS Pro</fullName>
                </value>
                <value>
                    <fullName>Sun Grid Engine (SGE)</fullName>
                </value>
                <value>
                    <fullName>Windows HPC Server</fullName>
                </value>
                <value>
                    <fullName>Torque</fullName>
                </value>
                <value>
                    <fullName>Slurm</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Send_Service_Survey_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box to trigger Process Builder to send the Contact the Service Surevy Reminder Email</description>
        <label>Send Service Survey Reminder</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Send_Service_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies if a survey should be sent for the Case</description>
        <label>Send Service Survey</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Service_Survey_Received_Date__c</fullName>
        <label>Service Survey Received Date</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Service_Survey_Status__c</fullName>
        <label>Service Survey Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Case Re-Opened</fullName>
                </value>
                <value>
                    <fullName>Not Received</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Queued</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Session_ID__c</fullName>
        <label>Session ID</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Siebel_Account_Id__c</fullName>
        <formula>Account.Siebel_Account_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Siebel Account Id</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Siebel_Contact_Id__c</fullName>
        <formula>Contact.Siebel_Contact_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Siebel Contact Id</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Siebel_SR__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>SR Id in Siebel</description>
        <externalId>true</externalId>
        <label>Siebel SR #</label>
        <length>70</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>    </validationRules></CustomObject>